반응형 메인 완료

--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -759,6 +759,7 @@ svg:not(:root) {
 
     .depth-category-group{
         display: flex;
+        flex-direction: column;
     }
 
 /*     .my-user-wrapper{
