--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -23,7 +23,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="header-button">후원하기</div>
+                        <div class="header-button">펀딩하기</div>
                         <div class="button-wrapper">
                             <div class="icon-wrapper">
                                 <svg class="like-icon" width="48" height="48" fill="none">
@@ -148,7 +148,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="header-button">후원하기</div>
+                        <div class="header-button">펀딩하기</div>
                         <div class="login-user-button-wrapper">
                             <div class="user-button-layout">
                                 <div class="user-avatar">
