--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -672,7 +672,7 @@
 
                             </div>
                         </div>
-                        <a class="view-total-funding-button" href="#" title="후원 목록 전체보기">후원 목록 전체보기</a>
+                        <a class="view-total-funding-button" href="#" title="펀딩 목록 전체보기">펀딩 목록 전체보기</a>
                     </div>
                 </div>
                 <div class="main-content-wrap">
@@ -691,8 +691,8 @@
                             <div class="main-content-list-title">
                                 <div>
                                     <div class="main-content-list-icon-with-title">
-                                        <a class="main-content-list-link" title="최근 본 프로젝트" href="#">
-                                            <span>최근 본 프로젝트</span>
+                                        <a class="main-content-list-link" title="인기 게시판" href="#">
+                                            <span>인기 게시판</span>
                                         </a>
                                     </div>
                                 </div>
@@ -731,7 +731,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 1</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -768,7 +768,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 2</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -805,7 +805,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 3</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -842,7 +842,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 4</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -880,7 +880,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 5</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -919,7 +919,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 6</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -955,7 +955,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 7</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -991,7 +991,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 8</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -1027,7 +1027,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 9</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
@@ -1063,7 +1063,7 @@
                                                                         </dd>
                                                                         <dt>
                                                                             <a href="">
-                                                                                <strong>봉사 제목</strong>
+                                                                                <strong>봉사 제목 10</strong>
                                                                             </a>
                                                                         </dt>
                                                                     </dl>
