맥북에서 커밋

--- a/src/main/resources/static/css/funding/funding-detail.css
+++ b/src/main/resources/static/css/funding/funding-detail.css
@@ -1527,6 +1527,12 @@ h2 {
         min-height: 500px;
     }
 }
+
+@media (min-width: 1080px){
+    .subColumnInner {
+        min-height: 280px;
+    }
+}
 .creatorCard {
     display: none;
 }
