--- a/src/main/resources/templates/funding/funding-detail.html
+++ b/src/main/resources/templates/funding/funding-detail.html
@@ -56,15 +56,15 @@
                                                 </div>
                                         </div>
                                     </div>
-                                    <div class="swiper-pagination swiper-pagination-bullets">
+                                    <!-- <div class="swiper-pagination swiper-pagination-bullets">
                                         <span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span>
                                         <span class="swiper-pagination-bullet"></span>
                                         <span class="swiper-pagination-bullet"></span>
                                         <span class="swiper-pagination-bullet"></span>
                                         <span class="swiper-pagination-bullet"></span>
-                                        </div>
+                                        </div> -->
                                 </div>
-                                <div class="swiper-button-prev swiper-button-disabled">
+                                <!-- <div class="swiper-button-prev swiper-button-disabled">
                                     <div name="arrow1-left" class="iconSVG">
                                         <svg viewBox="0 0 48 48">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -81,7 +81,7 @@
                                             </path>
                                         </svg>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </figure>
                     </div>
@@ -206,7 +206,7 @@
                                         <button class="pledgebutton pledgebuttonStyle">이 프로젝트 후원하기</button>
                                     </div>
                                 </div>
-                                <div
+                                <!-- <div
                                     class="tooltipWrapper tooltipStyle">
                                     <div class="secondButton">
                                         <div class="linkButton detailLinkButton">
@@ -222,8 +222,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="tertiaryButton">
+                                </div> -->
+                                <!-- <div class="tertiaryButton">
                                     <div class="SNSButtonWrap">
                                         <button
                                             type="button"
@@ -238,7 +238,7 @@
                                             </div>
                                             <span>42</span>
                                         </button>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -254,11 +254,11 @@
                             style="color: rgb(0, 0, 0); border-bottom: 3px solid rgb(0, 0, 0); padding-bottom: calc(0.5rem - 3px);">프로젝트
                             계획
                         </a>
-                        <a class="navItem" href="/twistedclue1/community/creator?ref=GNB%2F%EC%9D%B8%EA%B8%B0">업데이트
+                        <!-- <a class="navItem" href="/twistedclue1/community/creator?ref=GNB%2F%EC%9D%B8%EA%B8%B0">업데이트
                             <span class="communityPostAmount">2</span>
                         </a>
                         <a class="navItem" href="/twistedclue1/community/backer?ref=GNB%2F%EC%9D%B8%EA%B8%B0">커뮤니티</a>
-                        <a class="navItem" href="/twistedclue1/recommend">추천</a>
+                        <a class="navItem" href="/twistedclue1/recommend">추천</a> -->
                         </div>
                 </div>
             </nav>
@@ -319,9 +319,9 @@
                                         <li><a class="isActive isActive">소개</a></li>
                                         <li><a class="">예산</a></li>
                                         <li><a class="">일정</a></li>
-                                        <li><a class="">팀 소개</a></li>
+                                        <!-- <li><a class="">팀 소개</a></li> -->
                                         <li><a class="">선물 설명</a></li>
-                                        <li><a class="">신뢰와 안전</a></li>
+                                        <!-- <li><a class="">신뢰와 안전</a></li> -->
                                     </ul>
                                 </div>
                                 <div class="jEEjPy">
@@ -648,7 +648,7 @@
                                             </div>창작자 문의
                                         </a>
                                     </div> -->
-                                    <div class="reviewInfoWrap">
+                                    <!-- <div class="reviewInfoWrap">
                                         <div class="reviewInfoTitle"><a target="blank" href="/u/delight/review">
                                                 <div class="reviewTitleWrap">이전 프로젝트 후기 
                                                     <span class="reviewCnt">250</span>
@@ -661,8 +661,8 @@
                                                     </path>
                                                 </svg>
                                             </a>
-                                        </div>
-                                        <div class="reviewKeywordWrap">
+                                        </div> -->
+                                        <!-- <div class="reviewKeywordWrap">
                                             <span class="reviewKeyword reviewKeyword">
                                                 <span>즐거움을 줘요</span>
                                                 <strong>167</strong>
@@ -675,7 +675,7 @@
                                                 <span>퀼리티가 좋아요</span>
                                                 <strong>133</strong>
                                             </span>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
