--- a/src/main/resources/templates/funding/funding-gift.html
+++ b/src/main/resources/templates/funding/funding-gift.html
@@ -92,7 +92,8 @@
                                 </div>
                                 선물
                             </button>
-                            <button type="button" class="">
+                            <a href="/templates/funding/funding-item.html">
+                            <button type="button" class="isActive">
                                 <div name="list-solid" class="iconSVG">
                                     <svg viewBox="0 0 48 48">
                                         <rect x="8" y="10" width="5.81818" height="5.81818"></rect>
@@ -105,6 +106,7 @@
                                 </div>
                                 아이템
                             </button>
+                        </a>
                         </div>
                         <div>
                             <a class="ideaButton">
