--- a/src/main/resources/templates/funding/funding-initial-info.html
+++ b/src/main/resources/templates/funding/funding-initial-info.html
@@ -466,6 +466,6 @@
         $("#_topContent").load("/templates/funding/funding-topContent.html");
     });
 </script>
-<!-- <script src="/static/js/funding/funding-initial-info.js"></script> -->
+<script src="/static/js/funding/funding-initial-info.js"></script>
 <script src="/static/js/funding/funding-file.js"></script>
 </html>
