--- a/src/main/resources/templates/funding/funding-item.html
+++ b/src/main/resources/templates/funding/funding-item.html
@@ -77,23 +77,25 @@
                 <div class="subTapWrap">
                     <div class="subTap">
                         <div class="subTabInner">
+                            <a href="/templates/funding/funding-gift.html">
+                                <button type="button" class="">
+                                    <div name="reward-solid" class="iconSVG">
+                                        <svg viewBox="0 0 48 48">
+                                            <path
+                                                d="M6.1 14.9994C6.04477 14.9994 6 15.0442 6 15.0994L6 26.3066C6 26.3618 6.04477 26.4066 6.1 26.4066H9.5V41.8994C9.5 41.9547 9.54477 41.9994 9.6 41.9994H21.9C21.9552 41.9994 22 41.9547 22 41.8994V26.4066L26 26.4066V41.8994C26 41.9547 26.0448 41.9994 26.1 41.9994H38.4C38.4552 41.9994 38.5 41.9547 38.5 41.8994V26.4066H41.9C41.9552 26.4066 42 26.3618 42 26.3066V15.0994C42 15.0442 41.9552 14.9994 41.9 14.9994L6.1 14.9994Z">
+                                            </path>
+                                            <path
+                                                d="M21.9125 11.8069L18.4181 4.11919C18.3907 4.05899 18.3135 4.04145 18.2628 4.08393L12.1476 9.2091C12.0855 9.26112 12.1078 9.3615 12.186 9.38236L21.7957 11.9449C21.8773 11.9667 21.9474 11.8838 21.9125 11.8069Z">
+                                            </path>
+                                            <path
+                                                d="M26.0875 11.8069L29.5819 4.11919C29.6093 4.05899 29.6865 4.04145 29.7372 4.08393L35.8524 9.2091C35.9145 9.26112 35.8922 9.3615 35.814 9.38236L26.2043 11.9449C26.1227 11.9667 26.0526 11.8838 26.0875 11.8069Z">
+                                            </path>
+                                        </svg>
+                                    </div>
+                                    선물
+                                </button>
+                            </a>
                             <button type="button" class="isActive">
-                                <div name="reward-solid" class="iconSVG">
-                                    <svg viewBox="0 0 48 48">
-                                        <path
-                                            d="M6.1 14.9994C6.04477 14.9994 6 15.0442 6 15.0994L6 26.3066C6 26.3618 6.04477 26.4066 6.1 26.4066H9.5V41.8994C9.5 41.9547 9.54477 41.9994 9.6 41.9994H21.9C21.9552 41.9994 22 41.9547 22 41.8994V26.4066L26 26.4066V41.8994C26 41.9547 26.0448 41.9994 26.1 41.9994H38.4C38.4552 41.9994 38.5 41.9547 38.5 41.8994V26.4066H41.9C41.9552 26.4066 42 26.3618 42 26.3066V15.0994C42 15.0442 41.9552 14.9994 41.9 14.9994L6.1 14.9994Z">
-                                        </path>
-                                        <path
-                                            d="M21.9125 11.8069L18.4181 4.11919C18.3907 4.05899 18.3135 4.04145 18.2628 4.08393L12.1476 9.2091C12.0855 9.26112 12.1078 9.3615 12.186 9.38236L21.7957 11.9449C21.8773 11.9667 21.9474 11.8838 21.9125 11.8069Z">
-                                        </path>
-                                        <path
-                                            d="M26.0875 11.8069L29.5819 4.11919C29.6093 4.05899 29.6865 4.04145 29.7372 4.08393L35.8524 9.2091C35.9145 9.26112 35.8922 9.3615 35.814 9.38236L26.2043 11.9449C26.1227 11.9667 26.0526 11.8838 26.0875 11.8069Z">
-                                        </path>
-                                    </svg>
-                                </div>
-                                선물
-                            </button>
-                            <button type="button" class="">
                                 <div name="list-solid" class="iconSVG">
                                     <svg viewBox="0 0 48 48">
                                         <rect x="8" y="10" width="5.81818" height="5.81818"></rect>
@@ -522,7 +524,7 @@
                                         </div>
                                         <p type="p4" color="#e53c41" class="msgStyle errorMsg"></p>
                                     </section>
-                                    <section class="sectionStyle">
+                                    <!-- <section class="sectionStyle">
                                         <div class="deliveryDiv">
                                             <button type="button" class="deliveryButton">
                                                 <p>배송 여부</p>
@@ -566,7 +568,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </section>
+                                    </section> -->
                                     <section class="sectionStyle">
                                         <div class="deliveryDiv">
                                             <button type="button" class="areaToolTip">
