--- a/src/main/resources/templates/funding/funding-plan.html
+++ b/src/main/resources/templates/funding/funding-plan.html
@@ -24,6 +24,7 @@
     width: 100%;
     height: 2px;
     background: rgb(248, 100, 83);
+    
 }
 </style>
 <body>
@@ -131,26 +132,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="formHalf">
-                                                <p class="formTitle">시작 시간</p>
-                                                <div class="selectWrap">
-                                                    <span class="SelectSingle singleStyle" readonly="" disabled="">
-                                                        <input disabled="" readonly="" type="text" inputmode="text" autocomplete="off" autocapitalize="off" class="innerInput" value="시작 시간을 선택해주세요">
-                                                        <div name="arrow2-down" class="icon-svg">
-                                                            <svg viewBox="0 0 48 48">
-                                                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                                                    d="M2 14.4065C2 13.1363 3.09843 12.0615 4.39657 12.0615C4.99571 12.0615 5.59485 12.257 6.09414 12.7455L23.9685 29.4526L41.843 12.6478C42.8415 11.7684 44.3394 11.7684 45.338 12.7455C46.2367 13.7226 46.2367 15.1882 45.2381 16.0676L23.9685 36L2.79886 16.0676C2.29957 15.6767 2 14.9928 2 14.4065Z">
-                                                                </path>
-                                                            </svg>
-                                                        </div>
-                                                    </span>
-                                                    <!-- 들어갈 곳 -->
-                                                    <div></div>
-                                                
-                                                </div>
-                                                <div type="p4" color="#e53c41" class="selectErr1 selectErr2">
-                                                </div>
-                                            </div>
+                                            
                                         </div>
                                         <div class="FundingPlan__FundingTerm-sc-1f9ovdu-3 fundingTerm cFBWEo">
                                             <p class="formTitle">펀딩 기간</p>최대 60일
@@ -206,7 +188,7 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="planItem">
+                                    <!-- <li class="planItem">
                                         <div class="fundingToolTip">
                                             <div class="labelWrapper"><button
                                                     type="button" class="labelToolTip">
@@ -275,7 +257,7 @@
                                             </div>
                                         </div>
                                         후원자 결제 종료 다음 날부터 7영업일
-                                    </li>
+                                    </li> -->
                                 </ol>
                             </div>
                         </div>
@@ -308,6 +290,7 @@
         $receipt.val() = $targetAmount - $feeAmount;
         }
     );
+
 
 </script>
 </html>
