--- a/src/main/resources/templates/funding/funding-support.html
+++ b/src/main/resources/templates/funding/funding-support.html
@@ -143,7 +143,7 @@
                     <div class="cardWrapper">
                         <div class="settingForm">
                             <div class="formHeader fnt-p1">
-                                <p class="formTitle">결제수단</p>
+                                <p class="formTitle">결제수단(이부분을 공양미로 대체해야됨)</p>
                             </div>
                             <div class="roundWrapper">
                                 <div class="selectorWrapper">
