엔티티 설계 중

--- a/src/main/resources/templates/mypage/my-support-list.html
+++ b/src/main/resources/templates/mypage/my-support-list.html
@@ -103,6 +103,7 @@
                                 </div>
                                 <div class="support-request-content">세상을 다 가져봐</div>
                                 <div class="support-request-reply">공양미 100석 후원</div>
+                                <div class="support-request-reply">펀딩</div>
                             </div>
                             <div class="support-request-detail">
                                 <button class="go-support-request">
@@ -121,6 +122,7 @@
                                 </div>
                                 <div class="support-request-content">세상을 다 가져봐</div>
                                 <div class="support-request-reply">공양미 100석 후원</div>
+                                <div class="support-request-reply">후원</div>
                             </div>
                             <div class="support-request-detail">
                                 <button class="go-support-request">
