--- a/src/main/resources/templates/mypage/exchange-request.html
+++ b/src/main/resources/templates/mypage/exchange-request.html
@@ -103,10 +103,10 @@
                         </div>
                         <form action="" class="change-modal-form-wrapper" name="exchangeForm">
                             <div class="change-modal-form-row">
-                                <span class="change-modal-form-label">이름</span>
+                                <span class="change-modal-form-label">은행</span>
                                 <div class="change-modal-form-field">
                                     <div class="change-modal-form-title">
-                                        <input type="text" placeholder="이름을 입력하세요." id="name" class="change-modal-form-title-input" maxlength="4">
+                                        <input type="text" placeholder="은행을 입력하세요." id="name" class="change-modal-form-title-input" maxlength="4">
                                         <div class="error-message">비워둘 수 없습니다.</div>
                                     </div>
                                 </div>
